update bibliography style

--- a/header.tex
+++ b/header.tex
@@ -1,4 +1,4 @@
-%!TEX root = plos_template.tex
+%!TEX root = paper.tex
 % Template for PLoS
 % Version 1.0 January 2009
 %
@@ -42,9 +42,6 @@
 % Bold the 'Figure #' in the caption and separate it with a period
 % Captions will be left justified
 \usepackage[labelfont=bf,labelsep=period,justification=raggedright]{caption}
-
-% Use the Science provided bibtex style
-\bibliographystyle{naturemag}
 
 % Remove brackets from numbering in List of References
 \makeatletter
@@ -119,7 +116,7 @@ urlcolor=[rgb]{.09 .29 .54}}
 \renewcommand*{\equationautorefname}{Eq.}
 \renewcommand*{\tableautorefname}{Table}
 
-\renewcommand{\refname}{References and Notes}
+\renewcommand{\refname}{References}
 
 \newcommand{\beginsupplement}{%
         \setcounter{table}{0}
