add supplement section and reformat figures

--- a/paper.tex
+++ b/paper.tex
@@ -535,18 +535,18 @@ random ensembles primarily studied here.
 
 \section{Acknowlegements}  The authors would like to thank Jay Sulzberger and Ximo Pechuan for useful suggestions and discussions.
 
-\newpage
+\pagebreak
 
 \bibliographystyle{pnas}
 \bibliography{bib/books,bib/papers}
 
-\newpage
+\pagebreak
 \FloatBarrier
 
 \section{Figure Legends}
 \input{tex/figures}
 
-\newpage
+\pagebreak
 \FloatBarrier
 
 \beginsupplement
@@ -563,9 +563,9 @@ random ensembles primarily studied here.
 
 % \input{tex/tablewithgraphs}
 
-\input{tex/extra}
+% \input{tex/extra}
 
-\input{tex/figuressupp}
+% \input{tex/figuressupp}
 
 \end{document}
 
