--- a/tex/figures.tex
+++ b/tex/figures.tex
@@ -6,19 +6,25 @@
 \label{fig:examplesystemmodules}
 \end{figure}
 
+\pagebreak
+
 \begin{figure}[!ht]
 \centering
-\noindent\includegraphics[width=0.5\columnwidth]{fig/scc2.pdf}
+\noindent\includegraphics[width=0.4\columnwidth]{fig/scc2.pdf}
 \caption{{\bf Example of strongly connected components.} (A) - (D) show strongly connected components highlighted in gray for each of the four graphs representing the interdependencies relevant to four different three component systems. Note that the most hierarchical system in (A) has the highest possible number of connected components, three, whereas the system containing a single cycle and therefore posessing no hierarchy contains only one connected component. Systems (B) and (C) represent examples of hierarchical modular systems that posess both modularity and hierarchy.}
 \label{fig:scc}
 \end{figure}
 
+\pagebreak
+
 \begin{figure}[!ht]
 \centering
-\noindent\includegraphics[width=0.8\columnwidth]{fig/region2and3.pdf}
+\noindent\includegraphics[width=0.5\columnwidth]{fig/region2and3.pdf}
 \caption{{\bf Stability conditions on coefficients of the characteristic polynomial for two and three component systems.} The regions correspond to all possible relationships between the invariants determined by the characteristic polynomial.}
 \label{fig:region2and3}
 \end{figure}
+
+\pagebreak
 
 \begin{figure}[!ht]
 \centering
