--- a/paper.tex
+++ b/paper.tex
@@ -532,6 +532,11 @@ random ensembles primarily studied here.
 
 \section{Discussion}
 \todo{write Discussion}
+The relationship between structure and function is fundamental to biology. Structure-function relationships exist at every level of the biological hierarchy. In all such networks, the ability of systems to persist over long periods of time, is dependent upon their dynamical stability. Here we have demonstrated a structure-function relationship wherein biological networks that are more hierarchical are more stable and thus more likely to persist in the evolutionary process. This relationship transcends levels of the biological hierarchy in the sense that it is formulated mathematically and at a level of abstraction that allows its conclusions to apply independently to each of these levels.
+
+The fact that such a relationship exists has the potential to unify our understanding of biological networks. Our development suggests two predictions having empirical impact capable of testing this theory. One is that, if this theory is correct, any ensemble of systems where robustness has been selected for over a sufficiently long period of time, should exhibit a bias toward more hierarchical network topologies. In the short term, this prediction may be checked by looking at both metabolic and transcription factor networks, which have already been shown to display hierarchical structure, but whose dynamics have not been sufficiently well characterized to ascertain their robustness \cite{Zhao2006,Bhardwaj2010,Colm}. The other prediction of the theory outlined here that may be able to be checked is the converse statement that an ensemble of systems demonstrating a positive or negative bias in their network topology toward hierarchy may have been under selection for, or respectively against, robustness.
+
+
 
 \section{Acknowlegements}  The authors would like to thank Jay Sulzberger and Ximo Pechuan for useful suggestions and discussions.
 
